telecom-bretagne/javacompiler/SecondPhase/tests/Good/TesConstructorNoDup2.java
package tests;

class A {

	public A(String s) {
	}
	
	A() {
	}
	
	public static void main(String[] args) {
		// TODO Auto-generated method stub

	}

}

