telecom-bretagne/javacompiler/SecondPhase/tests/Fail/TestDuplicatedModifiersClassFail.java
package main;

public final strictfp final class Main {

	public static void main(String argv[]){
		System.out.println("Hello World!");
	}
	
}
